--- a/static/style.css
+++ b/static/style.css
@@ -163,7 +163,7 @@ form{
 .text-color-green{
 	color: #239B56;
 }
-/*--------------------------------------------*/
+/*-------------------------------------- go to bottom button ------*/
 
 .scroll-down-btn{
 	position: absolute;
