--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -73,12 +73,16 @@
 	<div class="row justify-content-center">
 		<div class="chat-container-wrappers mb-2">
 			<form onsubmit="sendMessage(event)" autocomplete="off" class="col">
+
+				<!-- go to bottom btn -->
 				<div class="scroll-down-btn" onclick="scrollToBottom()" title="scroll to bottom">
 					<svg xmlns="http://www.w3.org/2000/svg" width="1.9em" height="1.9em" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
 				  <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
 				  <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z"/>
 				</svg>
 				</div>
+				
+				<!-- message Form -->
 				<div class="row align-items-center">
 					<input type="text" name="text" class="text-input col message-input" placeholder="type a message..." required >
 					<button type="submit" class=" ml-2 btn font-weight-bold">
